{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 75,
  "lineage": "9ce494c7-37d3-c755-a931-04b09ce04926",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cadbb88f79056d01",
            "arn": "arn:aws:ec2:us-east-1:047444812039:elastic-ip/eipalloc-0cadbb88f79056d01",
            "association_id": "eipassoc-0472bf04ddf11be5f",
            "domain": "vpc",
            "id": "eipalloc-0cadbb88f79056d01",
            "network_border_group": "us-east-1",
            "network_interface": "eni-098cf18627f14f29d",
            "private_dns": "ip-10-0-0-218.ec2.internal",
            "private_ip": "10.0.0.218",
            "public_dns": "ec2-98-84-128-77.compute-1.amazonaws.com",
            "public_ip": "98.84.128.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "eip-nat_management"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "eip-nat_management"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047444812039:loadbalancer/tf-lb-20241009063827496800000001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20241009063827496800000001-759823231.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20241009063827496800000001",
            "idle_timeout": 60,
            "instances": [
              "i-07c7ef30fde9c8f3b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20241009063827496800000001",
            "name_prefix": "tf-lb-",
            "security_groups": [
              "sg-062e5d39d8946135f"
            ],
            "source_security_group": "047444812039/elb_jenkins_sg",
            "source_security_group_id": "sg-062e5d39d8946135f",
            "subnets": [
              "subnet-006b05a829b332de4",
              "subnet-036d08bb486dbe4be"
            ],
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "jenkins_elb"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "jenkins_elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.jenkins_master",
            "aws_security_group.elb_jenkins_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ff65cdc7e40806",
            "arn": "arn:aws:ec2:us-east-1:047444812039:instance/i-04fbc3be3e5e64d86",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fbc3be3e5e64d86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "management",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04040ccebf3367ab0",
            "private_dns": "ip-10-0-0-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.157",
            "public_dns": "ec2-44-211-145-146.compute-1.amazonaws.com",
            "public_ip": "44.211.145.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0601a31dffb864a1a",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036d08bb486dbe4be",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "bastion"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d36d4df2c69b343"
            ]
          },
          "dependencies": [
            "aws_key_pair.management_id",
            "aws_security_group.bastion_host_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.default-vpc",
            "data.aws_ami.bastion-host"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0381223b27beabb1d",
            "arn": "arn:aws:ec2:us-east-1:047444812039:instance/i-07c7ef30fde9c8f3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c7ef30fde9c8f3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "management",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a17944fb6a5ad6c3",
            "private_dns": "ip-10-0-2-152.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.152",
            "public_dns": "ec2-3-93-232-183.compute-1.amazonaws.com",
            "public_ip": "3.93.232.183",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cfc43639ed3b355f",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c2962e7aafc9e21",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "jenkins_master"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "jenkins_master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06919b3bc83a647e0"
            ]
          },
          "dependencies": [
            "aws_key_pair.management_id",
            "aws_security_group.bastion_host_sg",
            "aws_security_group.elb_jenkins_sg",
            "aws_security_group.jenkins_master_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.default-vpc",
            "data.aws_ami.jenkins-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:internet-gateway/igw-0695a16a01e001aef",
            "id": "igw-0695a16a01e001aef",
            "owner_id": "047444812039",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "igw_management"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "igw_management"
            },
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "dependencies": [
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cadbb88f79056d01",
            "association_id": "eipassoc-0472bf04ddf11be5f",
            "connectivity_type": "public",
            "id": "nat-0b5d08541e90565e1",
            "network_interface_id": "eni-098cf18627f14f29d",
            "private_ip": "10.0.0.218",
            "public_ip": "98.84.128.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036d08bb486dbe4be",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "nat_management"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "nat_management"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:route-table/rtb-09de8805813bc32a9",
            "id": "rtb-09de8805813bc32a9",
            "owner_id": "047444812039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b5d08541e90565e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "private_rt_management"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "private_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:route-table/rtb-085fa5149c44ab469",
            "id": "rtb-085fa5149c44ab469",
            "owner_id": "047444812039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0695a16a01e001aef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "public_rt_management"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "public_rt_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4efe39f8dbe9c0f",
            "route_table_id": "rtb-09de8805813bc32a9",
            "subnet_id": "subnet-08c2962e7aafc9e21"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.default-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b145f5357109740",
            "route_table_id": "rtb-09de8805813bc32a9",
            "subnet_id": "subnet-0d70f8a6781739b68"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053900db8bb6d7df9",
            "route_table_id": "rtb-085fa5149c44ab469",
            "subnet_id": "subnet-036d08bb486dbe4be"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.default-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02729ef85e3d5738d",
            "route_table_id": "rtb-085fa5149c44ab469",
            "subnet_id": "subnet-006b05a829b332de4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:security-group/sg-01d36d4df2c69b343",
            "description": "Allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d36d4df2c69b343",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg_management",
            "name_prefix": "",
            "owner_id": "047444812039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "bastion_sg_management"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "bastion_sg_management"
            },
            "timeouts": null,
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:security-group/sg-062e5d39d8946135f",
            "description": "Allow http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062e5d39d8946135f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_jenkins_sg",
            "name_prefix": "",
            "owner_id": "047444812039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "elb_jenkins_sg"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "elb_jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:security-group/sg-06919b3bc83a647e0",
            "description": "Allow traffic on port 8080 and enable SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06919b3bc83a647e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-062e5d39d8946135f"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d36d4df2c69b343"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_master_sg",
            "name_prefix": "",
            "owner_id": "047444812039",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "jenkins_master_sg"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "jenkins_master_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_host_sg",
            "aws_security_group.elb_jenkins_sg",
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:subnet/subnet-08c2962e7aafc9e21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2962e7aafc9e21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047444812039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "private_10.0.2.0/24.0_us-east-1a"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "private_10.0.2.0/24.0_us-east-1a"
            },
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "dependencies": [
            "aws_vpc.default-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:subnet/subnet-0d70f8a6781739b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d70f8a6781739b68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047444812039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "private_10.0.3.0/24.0_us-east-1b"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "private_10.0.3.0/24.0_us-east-1b"
            },
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "dependencies": [
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:subnet/subnet-036d08bb486dbe4be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036d08bb486dbe4be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047444812039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "public_10.0.0.0/24.0_us-east-1a"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "public_10.0.0.0/24.0_us-east-1a"
            },
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "dependencies": [
            "aws_vpc.default-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:subnet/subnet-006b05a829b332de4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006b05a829b332de4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047444812039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "public_10.0.1.0/24.0_us-east-1b"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "public_10.0.1.0/24.0_us-east-1b"
            },
            "vpc_id": "vpc-072cd1f84ac7fb4f9"
          },
          "dependencies": [
            "aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047444812039:vpc/vpc-072cd1f84ac7fb4f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a3401c1665234428",
            "default_route_table_id": "rtb-02b85202abdec7a4f",
            "default_security_group_id": "sg-039f755ad8049805f",
            "dhcp_options_id": "dopt-042ce1197e27fd24f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072cd1f84ac7fb4f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b85202abdec7a4f",
            "owner_id": "047444812039",
            "tags": {
              "Author": "AbdulMusavvir",
              "Name": "management"
            },
            "tags_all": {
              "Author": "AbdulMusavvir",
              "Name": "management"
            }
          }
        }
      ]
    }
  ]
}